<resources>
    <string name="app_name">CritiX</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="alreadyHaveAccountLogin">Already have an account? Login</string>
    <string name="login">Login</string>
    <string name="dontHaveAccountRegister">Don\'t have an account? Register</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="discover">Discover</string>
    <string name="upload">Upload</string>
    <string name="profile">Profile</string>
    <string name="connect">Connect</string>
</resources>