<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    app:cardElevation="4dp"
    app:cardCornerRadius="8dp"
    app:cardBackgroundColor="@color/cream2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="8dp">

        <ImageView
            android:id="@+id/ivProfileImage"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:contentDescription="@string/profile"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_account" />

        <TextView
            android:id="@+id/tvUsername"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/username"
            android:gravity="center"
            android:textSize="@dimen/_14ssp"
            android:textAppearance="?attr/textAppearanceSubtitle1"
            android:textColor="@color/black"
            android:textStyle="bold"
            />

        <Button
            android:id="@+id/connectButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/connect"
            android:textColor="@color/white"
            android:backgroundTint="@color/buttonColor"
            android:textSize="@dimen/_14ssp"
            android:layout_marginTop="8dp"
            android:padding="4dp" />

    </LinearLayout>
</androidx.cardview.widget.CardView>
