<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/cream">

    <ImageView
        android:src="@drawable/ic_account"
        android:layout_width="@dimen/_80ssp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_40ssp"
        android:layout_height="@dimen/_80ssp"/>

    <!-- Login Message in Hindi -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="@dimen/_20ssp"
        android:textColor="@color/maroon"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:paddingTop="10dp" />

    <!-- Email Field -->
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="emailAddress"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/maroon"
        android:textColorHint="@color/maroon"
        android:background="@drawable/input_bg"
        android:padding="16dp"
        android:layout_marginTop="20dp" />

    <!-- Password Field -->
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="password"
        android:hint="@string/password"
        android:textColor="@color/maroon"
        android:textColorHint="@color/maroon"
        android:background="@drawable/input_bg"
        android:inputType="textPassword"
        android:padding="16dp"
        android:layout_marginTop="20dp" />

    <!-- Login Button -->
    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/white"
        android:backgroundTint="@color/buttonColor"
        android:textSize="18sp"
        android:layout_marginTop="30dp"
        android:padding="16dp" />

    <!-- Optional: Register redirect text -->
    <TextView
        android:id="@+id/registerRedirect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dontHaveAccountRegister"
        android:textSize="14sp"
        android:textColor="@color/maroon"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:focusable="true" />

</LinearLayout>
